--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-openai
-llama-index
-nltk
+streamlit>=1.31.0
+openai>=1.12.0
+pinecone-client>=3.0.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
