--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 streamlit>=1.31.0
-openai>=1.12.0
 pinecone-client>=3.0.0
+openai>=1.10.0
 numpy>=1.24.0
+scikit-learn>=1.3.0
 python-dotenv>=1.0.0
+pandas>=2.1.0
+plotly>=5.18.0
+tenacity>=8.2.0
+tiktoken>=0.5.0
+tqdm>=4.66.0
+requests>=2.31.0
+aiohttp>=3.9.0
