--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.31.0
-pinecone-client>=3.0.0
-openai>=1.11.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-deep-translator>=1.11.4
-python-dotenv>=1.0.0
-logging>=0.5.1.2
-typing>=3.7.4.3
+streamlit
+pinecone-client
+openai
+numpy
+scikit-learn
+deep-translator
+python-dotenv
+logging
+typing
